<resources>

    <string-array name="topics_array">
        <item>Accounting</item>
        <item>Advertising</item>
        <item>Audit</item>
        <item>Banking</item>
        <item>Corporate Law</item>
        <item>Ecommerce</item>
        <item>Edit</item>
        <item>Entrepreneurship</item>
        <item>Ethics</item>
        <item>Finance</item>
        <item>Human Resource</item>
        <item>Insurance</item>
        <item>Investing</item>
        <item>Logistics</item>
        <item>Marketing</item>
        <item>Negotiation</item>
        <item>Real Estate</item>
        <item>Record Keeping</item>
        <item>Sales</item>
        <item>Startup</item>
        <item>Technology</item>
        <item>Trading</item>
        <item>Writing</item>
    </string-array>

    <string name="app_name">improov</string>
    <string name="title_activity_register">Register</string>
    <string name="facebook_app_id">715675718859967</string>
    <string name="fb_login_protocol_scheme">fb715675718859967</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_interest_selection">InterestSelection</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="create_prof">Create your profile</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="addpicture">Add picture</string>
    <string name="bio">Enter a few words about yourself</string>
    <string name="maxchar">Max 400char</string>
    <string name="interests">Interests</string>
    <string name="selecttopics1">Please select the topics that best describe</string>
    <string name="selecttopics2">your interests!</string>
    <string name="selecttopics">Please select the topics that best describe your interests!</string>
    <string name="accounting">Accounting</string>
    <string name="advertising">Advertising</string>
    <string name="audit">Audit</string>
    <string name="banking">Banking</string>
    <string name="law">Corporate Law</string>
    <string name="ecom">Ecommerce</string>
    <string name="entr">Entrepreneurship</string>
    <string name="ethics">Ethics</string>
    <string name="finance">Finance</string>
    <string name="hr">Human Resource</string>
    <string name="insurance">Insurance</string>
    <string name="logistics">Logistics</string>
    <string name="investing">Investing</string>
    <string name="marketing">Marketing</string>
    <string name="negotiation">Negotiation</string>
    <string name="realestate">Real Estate</string>
    <string name="records">Record Keeping</string>
    <string name="sales">Sales</string>
    <string name="startup">Startup</string>
    <string name="tech">Technology</string>
    <string name="trading">Trading</string>
    <string name="writing">Writing</string>
    <string name="zero">0</string>
    <string name="five">5</string>
    <string name="slash">/</string>
    <string name="login">Login</string>
    <string name="signuphere">New? Sign up here</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpass">Confirm password</string>
    <string name="gdpr">I agree to my data being stored in compliance with GDPR Regulations</string>
    <string name="submitdetails">Submit Details</string>
    <string name="registered">Already Registered? Click Here</string>
    <string name="title_activity_menu_container">MenuContainer</string>
    <string name="title_activity_article_page">ArticlePage</string>
    <string name="title_activity_student_or_coach">StudentOrCoach</string>
    <string name="title_activity_create_program">CreateProgram</string>
    <string name="qualifications">Qualifications</string>
    <string name="qualificaionsdesc">Enter some of your qualifications</string>
    <string name="channel_name">New message</string>
    <string name="channel_description">New message received</string>
    <string name="googlepay_button_content_description" translatable="false">Pay with Google Pay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_discussion">CreateDiscussion</string>
    <string name="title_activity_see_all_discussions">SeeAllDiscussions</string>
    <string name="title_activity_view_discussion">ViewDiscussion</string>
    <string name="title_activity_view_profile">ViewProfile</string>
    <string name="title_activity_view_program">ViewProgram</string>
    <string name="title_activity_view_coach">ViewCoach</string>
    <string name="title_activity_request_hour_session">RequestHourSession</string>
    <string name="title_activity_view_notification">ViewNotification</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_ready_to_pay">ReadyToPayActivity</string>
    <string name="title_activity_confirmation">ConfirmationActivity</string>
    <string name="title_activity_retrieve_payment">RetrievePayment</string>
    <string name="title_activity_view_session">ViewSession</string>
    <string name="title_activity_view_article">ViewArticle</string>
    <string name="title_activity_saved_articles">SavedArticles</string>
    <string name="title_activity_view_person">ViewPerson</string>
    <string name="title_activity_report_user">ReportUser</string>
    <string name="title_activity_review_user">ReviewUser</string>
    <string name="title_activity_view_review">ViewReview</string>
</resources>
