<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#94A9D8"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Register">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="#fff"
        android:textSize="60sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/name_edit_register"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:backgroundTint="#fff"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/surname_edit_register"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#fff"
        android:hint="Surname"
        android:inputType="text"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/email_edit_register"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:backgroundTint="#fff"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/password_edit_register"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7sp"
        android:backgroundTint="#fff"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/c_password_edit_register"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7sp"
        android:backgroundTint="#fff"
        android:hint="@string/confirmpass"
        android:inputType="textPassword"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textSize="26sp" />

    <CheckBox
        android:id="@+id/data_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#FFF"
        android:text="@string/gdpr"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="315sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:background="#2E4477"
        android:text="@string/submitdetails"
        android:textColor="#fff"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_login_from_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:background="@null"
        android:text="@string/registered"
        android:textColor="#fff"
        android:textSize="16sp" />

</LinearLayout>